<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="essence_settings_title" translatable="false">Essence シ</string>
    <string name="essence_settings_subtitle" translatable="false" >How are you today?</string>
    <string name="extensions_title">Essence</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="default_text">Default</string>
    <string name="dlg_ok">OK</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="search">Search</string>
    <string name="search_apps">Search apps</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="unit_pixels" translatable="false">dp</string>
    <string name="unit_seconds">seconds</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="system_category">Team</string>
    <string name="themes_category">Themes</string>
    <string name="qs_category">QS</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="hardware_category">Extras</string>
    <string name="build_tweaks_summary_title">Strive for Amelioration</string>
    <string name="listview">ListView</string>
    <string name="rom_name" translatable="false">Project Elixir シ</string>
    <string name="rom_summ" translatable="false">Redefining your android experience with our new update which offers minimal UI enhancement and close to Stock android experience with customization</string>
    <string name="rom_summ2" translatable="false">Your experience while using our ROM will be buttery smooth without compromising the quality of the Android experience</string>
    <string name="summ_about">About ROM and its Developers</string>
    <string name="dev_support">Developers and Team</string>
    <string name="aboutus_tab">Know more about us</string>
    <string name="donate">Donate us here</string>
    <string name="donate_summary">Donate to keep Project active and running</string>
    <string name="dev1">Saurav</string>
    <string name="dev1_summary">Founder, Lead Developer</string>
    <string name="dev2">Nishant</string>
    <string name="dev2_summary">Lead Developer</string>
    <string name="note">Important NOTE</string>
    <string name="note_summary">Dont Direct Message any devs, groups are there for some reason and use some brain. If we see any direct message we will ban him or her from everywhere. We arent here to serve you 24*7 so just keep patience. Just let us live our life peacefully</string>
    <string name="download">Download your Builds</string>
    <string name="download_summary">Tap here to download builds for your respective devices</string>
    <string name="paypal">Paypal</string>
    <string name="don_summ1">• As a matter of fact that in order to build a Custom ROM there are certain pre-requisite such as a High-End Building Server (Jenkins) or PC having very High-End technical specification combined with a very High-Speed internet connection.</string>
    <string name="don_summ2">• We developers need to allot our time and hard work from our Academics hefty schedule in the proper maintenance of the custom ROM so that we can provide users with timely and stable updates</string>
    <string name="don_summ3">• Do consider donating or buying me a coffee on Paypal or join us on Patreon for sustainable support and rewards if you want to appreciate our work</string>
    <string name="tele_group">Telegram Discussion Group</string>
    <string name="grp_summary">If you have any issues, do share in our telegram discussion group</string>
    <string name="tele_channel">Telegram Update Channel</string>
    <string name="update_summary">Subscribe us on telegram channel for faster updates</string>
    <string name="website">Our Official WebSite</string>
    <string name="website_summary">Do visit our website, You will get all necessary info here</string>
    <string name="download_donate">Download and Website</string>
    <string name="telegram">Telegram Support</string>
    <string name="donateus">Support Us by Donating</string>
    <string name="patreon">Want Early Build access ?</string>
    <string name="patreon_summary">Patreon is for those who wants to support devs, get early build access, some exclusive features and benefits.</string>
    <string name="enable_fingerprint_ripple_effect_title">Ripple effect</string>
    <string name="enable_fingerprint_ripple_effect_summary">Show ripple effect on unlock with fingerprint</string>
    <string name="theme_customization_font_title">Headline / Body font</string>
    <string name="theme_customization_font_summary">Set system font style</string>
    <string name="theme_customization_icon_shape_title">Icon shape</string>
    <string name="theme_customization_icon_shape_summary">Set system icon shape style</string>
    <string name="theme_customization_icon_pack_title">Icon pack</string>
    <string name="theme_customization_icon_pack_summary">Set custom icon pack style</string>
    <string name="theme_customization_signal_icon_title">Signal icon style</string>
    <string name="theme_customization_signal_icon_summary">Set custom signal icon style</string>
    <string name="theme_customization_wifi_icon_title">WiFi icon style</string>
    <string name="theme_customization_wifi_icon_summary">Set custom wifi icon style</string>
    <string name="theme_customization_data_title">Data icon style</string>
    <string name="theme_customization_data_summary">Set custom data icon style</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Show charging current, voltage, wattage and battery temperature on lockscreen while charging</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the cross sign next to signal bar when data is disabled</string>
    <string name="show_wifi_standard_icon_title">Show Wi-Fi type icon</string>
    <string name="show_wifi_standard_icon_summary">Show Wi-Fi type in Wi-Fi signal indicator</string>
    <string name="icon_manager_title">Icon manager</string>
    <string name="icon_manager_summary">Control visibility of status bar icons</string>
    <string name="sbicon_category">Statusbar Icon Manager</string>
    <string name="theme_customization_brightness_slider_title">Brightness slider style</string>
    <string name="theme_customization_brightness_slider_summary">Set custom brightness slider style</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="screen_off_animation_title">Screen off animation</string>
    <string name="lockscreen_effects_cat">Lockscreen Animations</string>
    <string name="statusbar_battery">Battery Customizations</string>
    <string name="status_bar_battery_style_summary">Statusbar and QS Battery Styles</string>
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="edge_light_title">Edge light</string>
    <string name="edge_light_summary">Light up the side edges of the screen on notification pulse</string>
    <string name="lockscreen_enable_power_menu_title">Allow power menu on lockscreen</string>
    <string name="lockscreen_enable_power_menu_summary">Allow accessing power menu on secure lockscreen</string>
    <string name="status_bar_network_traffic_settings_title">Network traffic monitor</string>
    <string name="status_bar_network_traffic_settings_summary">Display and customize current network traffic levels</string>
    <string name="udfps_recog_animation_effect_title">UDFPS custom animation</string>
    <string name="udfps_recog_animation_effect_summary">Choose animation effect</string>
    <string name="udfps_recog_animation_randomize_title">Random UDFPS animation</string>
    <string name="udfps_recog_animation_randomize_summary">Changes UDFPS animation randomly on every unlock</string>
    <string name="fingerprint_category">Fingerprint</string>
    <string name="fprint_error_vib_title">Fingerprint error vibration</string>
    <string name="fprint_error_vib_summary">Vibrate on error fingerprint authentication</string>
    <string name="fprint_success_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_success_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="monet_engine_custom_color_title">Accent color</string>
    <string name="monet_engine_custom_color_summary">Choose custom color for accent</string>
    <string name="monet_engine_custom_bgcolor_title">Background color</string>
    <string name="monet_engine_custom_bgcolor_summary">Choose custom color for background</string>
    <string name="monet_engine_color_override_title">Custom color</string>
    <string name="monet_engine_luminance_factor_title">Luminance</string>
    <string name="monet_engine_luminance_factor_summary">Higher values produce brighter colors</string>
    <string name="monet_engine_chroma_factor_title">Chroma factor</string>
    <string name="monet_engine_chroma_factor_summary">Higher values produce stronger colors</string>
    <string name="monet_engine_tint_background_title">Tint background</string>
    <string name="monet_engine_tint_background_summary">Make luminance and chroma selection affect background colors as well</string>
    <string name="monet_engine_style_title">Theme style</string>
    <string name="monet_engine_color_source_title">Color source</string>
    <string name="monet_engine_whole_palette_title">Whole palette</string>
    <string name="monet_engine_whole_palette_summary">Make Luminance and Chroma selection affect secondary colors as well</string>
    <string name="themes_monet_title">Monet settings</string>
    <string name="themes_monet_summary">Customize Android\'s built-in theme engine</string>
    <string name="statusbar_colored_icons_title">Colored icons</string>
    <string name="statusbar_colored_icons_summary">Use proper app icons for notification icons in status bar</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="status_bar_clock_chip_title">Background chip</string>
    <string name="status_bar_clock_chip_summary">Display accented chip behind clock</string>
    <string name="power_menu_actions_title">Power Menu Actions</string>
    <string name="power_menu_actions_advanced_reboot_title">Advanced reboot</string>
    <string name="power_menu_actions_screenshot_title">Screenshot</string>
    <string name="power_menu_actions_airplane_title">Airplane</string>
    <string name="power_menu_actions_lockdown_title">Lockdown</string>
    <string name="power_menu_actions_users_title">Users</string>
    <string name="power_menu_actions_emergency_title">Emergency</string>
    <string name="power_menu_actions_devicecontrols_title">Device controls</string>
    <string name="status_bar_lyric_title">Status bar lyric</string>
    <string name="status_bar_lyric_summary">Show lyric in status bar (need app support)</string>
</resources>