<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title=" ">

    <!-- Header -->
    <PreferenceCategory
        android:title="Status Bar"
	android:summary="My eyes are always on you"    
        android:layout="@layout/custom_preference_category_essence">
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="@string/sbicon_category" >

        <Preference
            android:key="icon_manager"
	        android:title="@string/icon_manager_title"
	        settings:layout="@layout/essence_pref_card_mid2"	
            android:summary="@string/icon_manager_summary">
            <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
            
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="Statusbar Icon Options" >
	
 	<org.elixir.essence.preferences.SystemSettingSwitchPreference
		android:key="show_fourg_icon"
		settings:layout="@layout/xd_pref_card_top"
             android:title="@string/show_fourg_icon_title"
             android:summary="@string/show_fourg_icon_summary"
	     android:defaultValue="false"/>
	
	<org.elixir.essence.preferences.SystemSettingSwitchPreference
		android:key="data_disabled_icon"
		settings:layout="@layout/xd_pref_card_mid"
            android:title="@string/data_disabled_icon_title"
            android:summary="@string/data_disabled_icon_summary"
            android:defaultValue="true"/>

	<org.elixir.essence.preferences.SystemSettingSwitchPreference
	            android:key="wifi_standard_icon"
            android:title="@string/show_wifi_standard_icon_title"
		settings:layout="@layout/xd_pref_card_mid"
		android:summary="@string/show_wifi_standard_icon_summary"
            android:defaultValue="false"/>

            <!-- Notification Counter -->
        <org.elixir.essence.preferences.SystemSettingSwitchPreference    
            android:key="statusbar_notif_count"
		android:title="@string/status_bar_notif_count_title"
		settings:layout="@layout/xd_pref_card_mid"
            android:summary="@string/status_bar_notif_count_summary"
            android:defaultValue="false" />

    <org.elixir.essence.preferences.SystemSettingSwitchPreference 
        android:key="statusbar_clock_chip"
        android:title="@string/status_bar_clock_chip_title"
	settings:layout="@layout/xd_pref_card_mid"    
        android:summary="@string/status_bar_clock_chip_summary"
        android:defaultValue="false" />
	    
    <org.elixir.essence.preferences.SystemSettingSwitchPreference       
            android:key="statusbar_colored_icons"
            android:title="@string/statusbar_colored_icons_title"
	    android:summary="@string/statusbar_colored_icons_summary"
	    settings:layout="@layout/xd_pref_card_mid"
            android:defaultValue="false" />

        <org.elixir.essence.preferences.SystemSettingSwitchPreference   
            android:key="status_bar_brightness_control"
            android:title="@string/status_bar_toggle_brightness"
            settings:layout="@layout/xd_pref_card_bot"
            android:summary="@string/status_bar_toggle_brightness_summary"
            android:defaultValue="false"/>
    </PreferenceCategory>
	    	
    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="Network Indicator" >
	
        <!-- Network traffic -->
        <Preference
            android:key="network_traffic_settings"
            android:title="@string/status_bar_network_traffic_settings_title"
	    settings:layout="@layout/essence_pref_card_mid2"		
            android:summary="@string/status_bar_network_traffic_settings_summary"
            android:fragment="org.elixir.essence.fragments.NetworkTrafficSettings" />
    </PreferenceCategory>	
	
    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="@string/statusbar_battery">
        <Preference
            android:key="sbbatteryicons"
            android:title="@string/status_bar_battery_style_title"
	    settings:layout="@layout/essence_pref_card_mid2"	
            android:summary="@string/status_bar_battery_style_summary"
            android:fragment="org.elixir.essence.fragments.BatteryStyleSettings" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="Statusbar lyric">
	    
        <!-- Statusbar lyric -->
        <Preference
            android:key="status_bar_lyric_settings"
	    settings:layout="@layout/essence_pref_card_mid2"	
            android:title="@string/status_bar_lyric_title"
            android:summary="@string/status_bar_lyric_summary"
            android:fragment="org.elixir.essence.fragments.StatusbarLyricSettings" />
    </PreferenceCategory>
	
</PreferenceScreen>
