<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title=" ">

    <!-- Header -->
    <PreferenceCategory
        android:title="Lock Screen"
	    android:summary="It defines your potential and personality"      
        android:layout="@layout/custom_preference_category_essence">
    </PreferenceCategory>

    <PreferenceCategory
            android:layout="@layout/custom_preference_category"
	        android:title="Lockscreen Notification">

        <Preference
            android:key="edge_light_settings"
		    android:title="@string/edge_light_title"
		    settings:layout="@layout/essence_pref_card_mid2"
            android:summary="@string/edge_light_summary"
            android:fragment="org.elixir.essence.fragments.EdgeLightSettings" />
    </PreferenceCategory>

    <PreferenceCategory
            android:layout="@layout/custom_preference_category"
            android:title="@string/lockscreen_effects_cat">.

    <org.elixir.essence.preferences.SystemSettingListPreference
        android:key="screen_off_animation"
        settings:layout="@layout/essence_pref_card_mid2"
        android:title="@string/screen_off_animation_title"
        android:entries="@array/screen_off_animation_entries"
        android:entryValues="@array/screen_off_animation_values"
        android:summary="%s"
        android:defaultValue="0" />
    </PreferenceCategory>


    <PreferenceCategory
        android:key="lockscreen_ui_finterprint_category"
	    android:layout="@layout/custom_preference_category"        
        android:title="@string/fingerprint_category">

        <SwitchPreference
            android:key="fp_success_vibrate"
            android:title="@string/fprint_success_vib_title"
            android:summary="@string/fprint_success_vib_summary"
	        settings:layout="@layout/xd_pref_card_top" 	
            android:persistent="true" />

        <SwitchPreference
            android:key="fp_error_vibrate"
            android:title="@string/fprint_error_vib_title"
	        settings:layout="@layout/xd_pref_card_bot" 		
            android:summary="@string/fprint_error_vib_summary"
            android:persistent="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="ripple_effect_category"
	    android:layout="@layout/custom_preference_category"    
        android:title="@string/enable_fingerprint_ripple_effect_title">.

        <org.elixir.essence.preferences.SystemSettingSwitchPreference
            android:key="enable_ripple_effect"
            settings:layout="@layout/xd_pref_card_mid2" 
            android:title="@string/enable_fingerprint_ripple_effect_title"
            android:summary="@string/enable_fingerprint_ripple_effect_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="udfps_cust_category"
	    android:layout="@layout/custom_preference_category"    
        android:title="UDFPS Customisation" >

        <SwitchPreference
            android:key="udfps_anim_randomize"
  	        settings:layout="@layout/xd_pref_card_top"
            android:title="@string/udfps_recog_animation_randomize_title"
            android:summary="@string/udfps_recog_animation_randomize_summary"
            android:defaultValue="false" />

        <Preference
            android:key="udfps_recognizing_animation_preview"
            settings:layout="@layout/xd_pref_card_bot" 
            android:title="@string/udfps_recog_animation_effect_title"
            android:summary="@string/udfps_recog_animation_effect_summary"
            android:fragment="org.elixir.essence.fragments.UdfpsAnimation" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"    
        android:title="Lockscreen Options" >

        <org.elixir.essence.preferences.SystemSettingSwitchPreference
            android:key="lockscreen_enable_power_menu"
            android:title="@string/lockscreen_enable_power_menu_title"
	        settings:layout="@layout/xd_pref_card_top"
	        android:summary="@string/lockscreen_enable_power_menu_summary"
            android:defaultValue="true" />

        <org.elixir.essence.preferences.SystemSettingSwitchPreference
            android:key="lockscreen_battery_info"
	        settings:layout="@layout/xd_pref_card_bot"    
            android:title="@string/lockscreen_battery_info_title"
            android:summary="@string/lockscreen_battery_info_summary"
            android:defaultValue="true" />
  </PreferenceCategory>

</PreferenceScreen>

