<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021-2024 crDroid Android Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="monet_settings"	
    android:title=" ">

    <!-- Header -->
    <PreferenceCategory
        android:title="@string/themes_monet_title"
        android:summary="Theme engine where the magic happens"       
        android:layout="@layout/custom_preference_category_essence">
    </PreferenceCategory>  

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="Choose theme" >
    <ListPreference
        android:key="theme_style"
        android:title="@string/monet_engine_style_title"
	settings:layout="@layout/essence_pref_card_mid2"      
        android:entries="@array/monet_engine_style_entries"
        android:entryValues="@array/monet_engine_style_values"
        android:defaultValue="0" />
    </PreferenceCategory>
	
    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="Accent Color" >
    <ListPreference
        android:key="color_source"
        android:title="@string/monet_engine_color_source_title"
	settings:layout="@layout/essence_pref_card_mid2"      
        android:entries="@array/monet_engine_color_source_entries"
        android:entryValues="@array/monet_engine_color_source_values"
        android:defaultValue="0" />

    <org.elixir.essence.preferences.colorpicker.ColorPickerPreference
        android:key="accent_color"
	app:layout_pos="2"    
        android:title="@string/monet_engine_custom_color_title"
        android:summary="@string/monet_engine_custom_color_summary"
        android:defaultValue="0xFF1b6ef3" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="Accent Background" >
    <SwitchPreferenceCompat
        android:key="accent_background"
	settings:layout="@layout/xd_pref_card_mid2"    
        android:title="@string/monet_engine_custom_bgcolor_title"
        android:summary="@string/monet_engine_custom_bgcolor_summary"
        android:defaultValue="false" />

    <org.elixir.essence.preferences.colorpicker.ColorPickerPreference
        android:key="bg_color"
        android:title="@string/monet_engine_color_override_title"
        android:dependency="accent_background"
	app:layout_pos="2"    
        android:defaultValue="0xFF1b6ef3" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="Luminance" >
    <org.elixir.essence.preferences.CustomSeekBarPreference
	android:key="luminance_factor"
        android:title="@string/monet_engine_luminance_factor_title"
        android:summary="@string/monet_engine_luminance_factor_summary"
        android:defaultValue="0"
	app:layout_pos="1"     
        android:max="30"
        settings:min="-95"
        settings:interval="5"
        settings:units="%"
	settings:showSign="true" />

    <SwitchPreferenceCompat
        android:key="tint_background"
        android:title="@string/monet_engine_tint_background_title"
        android:summary="@string/monet_engine_tint_background_summary"
	settings:layout="@layout/xd_pref_card_bot"    
        android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="Chroma Factor" >
    <org.elixir.essence.preferences.CustomSeekBarPreference
        android:key="chroma_factor"
        android:title="@string/monet_engine_chroma_factor_title"
        android:summary="@string/monet_engine_chroma_factor_summary"
        android:defaultValue="0"
        android:max="100"
        settings:min="-95"
        settings:interval="5"
	app:layout_pos="1"     
        settings:units="%"
        settings:showSign="true" />

    <SwitchPreferenceCompat
        android:key="whole_palette"
        android:title="@string/monet_engine_whole_palette_title"
        android:summary="@string/monet_engine_whole_palette_summary"
	settings:layout="@layout/xd_pref_card_bot"    
        android:defaultValue="false" />
  </PreferenceCategory>
	
</PreferenceScreen>
