<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016-2024 crDroid Android Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="power_menu_actions"	
    android:title=" ">

    <!-- Header -->
    <PreferenceCategory
        android:title="@string/power_menu_actions_title"
        android:summary="Enhance the essential"       
        android:layout="@layout/custom_preference_category_essence">
    </PreferenceCategory>  
  
    <lineageos.preference.LineageSecureSettingSwitchPreference
        android:key="advanced_reboot"
        settings:layout="@layout/xd_pref_card_top"
        android:title="@string/power_menu_actions_advanced_reboot_title"
        android:defaultValue="true" />

    <SwitchPreferenceCompat
        android:key="screenshot"
        settings:layout="@layout/xd_pref_card_mid" 
        android:title="@string/power_menu_actions_screenshot_title"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="airplane"
        settings:layout="@layout/xd_pref_card_mid" 
        android:title="@string/power_menu_actions_airplane_title"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="users"
        settings:layout="@layout/xd_pref_card_mid" 
        android:title="@string/power_menu_actions_users_title"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="lockdown"
        settings:layout="@layout/xd_pref_card_mid" 
        android:title="@string/power_menu_actions_lockdown_title"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="emergency"
        settings:layout="@layout/xd_pref_card_mid"    
        android:title="@string/power_menu_actions_emergency_title"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="devicecontrols"
        settings:layout="@layout/xd_pref_card_bot"    
        android:title="@string/power_menu_actions_devicecontrols_title"
        android:defaultValue="false"
        android:enabled="false" />
</PreferenceScreen>
